--- a/Nombres.html
+++ b/Nombres.html
@@ -104,7 +104,7 @@
     
     <div class="display-area">
         <div class="number" id="numberDisplay">
-            <span class="thousands" id="thousands"><span class="hundreds" id="hundreds"></span><span class="tens" id="tens"></span><span class="units" id="units"></span>
+            <span class="thousands" id="thousands"></span><span class="hundreds" id="hundreds"></span><span class="tens" id="tens"></span><span class="units" id="units"></span>
         </div>
     </div>
     
